# public/swagger/swagger_1.json
@@ -229,6 +229,154 @@
                     }
                 }
             }
+        },
+        "/report/historic": {
+            "get": {
+                "tags": [
+                    "reporthistoric"
+                ],
+                "summary": "Index of report historic",
+                "operationId": "App\\Controller\\ReportHistoricController::index",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": "Welcome to your new controller!"
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Access denied"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                }
+            }
+        },
+        "/AddReportHistoric/{idBin}/{idUser}": {
+            "post": {
+                "tags": [
+                    "reporthistoric"
+                ],
+                "summary": "Add report historic",
+                "operationId": "add Report Historic",
+                "parameters": [
+                    {
+                        "name": "idBin",
+                        "in": "path",
+                        "description": "ID of bin",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "idUser",
+                        "in": "path",
+                        "description": "ID of user",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/reporthistoric"
+                                },
+                                "example": "\r\n     *         id: 50,\r\n     *         uuid_users_bin: 05,\r\n     *         created_at: 2020-01-20T09:47:53.086Z,\r\n     *         degradation: true,\r\n     *         bin_full: true,\r\n     *         missing: false"
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Access denied"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                }
+            }
+        },
+        "/users": {
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "Index of users",
+                "operationId": "App\\Controller\\UsersController::index",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": "Welcome to your new controller!"
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Access denied"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                }
+            }
+        },
+        "/AddUser/{id}": {
+            "post": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "Add all users",
+                "operationId": "createUsers",
+                "parameters": [
+                    {
+                        "name": "ID",
+                        "in": "path",
+                        "description": "ID of user",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "Token",
+                        "in": "header",
+                        "description": "Token pour l'utilisateur",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/users"
+                                },
+                                "example": "\r\n     *         id: 29,\r\n     *         user_id: 05,\r\n     *         created_at: 2020-01-20T09:47:53.086Z,\r\n     *         updated_at: 2020-01-20T09:47:53.086Z,\r\n     *         token: dsqsdqsd,\r\n     *         is_enable: true,\r\n     *         user_bin: 64"
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Access denied"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                }
+            }
         }
     },
     "components": {
@@ -428,7 +576,7 @@
                         "type": "integer"
                     },
                     "user_id": {
-                        "type": "string"
+                        "type": "integer"
                     },
                     "created_at": {
                         "type": "string",
