# src/Entity/Users.php
@@ -28,7 +28,7 @@ class Users
 
     /**
      * @ORM\Column(type="string")
-     * @OA\Property(type="string")
+     * @OA\Property(type="integer")
      */
     private $user_id;
 
@@ -152,6 +152,47 @@ class Users
         return $this->user_bin;
     }
 
+    /**
+     * @OA\Post(
+     *    path="/AddUserBin/{idBin}/{idUser}",
+     *    summary="Add report historic",
+     *    operationId="add Report Historic",
+     *    tags={"reporthistoric"},
+     *    @OA\Parameter(
+     *         name="idBin",
+     *         in="path",
+     *         description="ID of bin",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Parameter(
+     *         name="idUser",
+     *         in="path",
+     *         description="ID of user",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Success",
+     *         @OA\JsonContent(ref="#/components/schemas/reporthistoric",example="
+     *         id: 50,
+     *         uuid_users_bin: 05,
+     *         created_at: 2020-01-20T09:47:53.086Z,
+     *         degradation: true,
+     *         bin_full: true,
+     *         missing: false")
+     *      ),
+     *    @OA\Response(
+     *          response=403,
+     *     description="Access denied"
+     *    ),
+     *    @OA\Response(
+     *     response=404,
+     *     description="Not found"
+     *    )
+     * )
+     */
     public function addUserBin(UsersBin $userBin): self
     {
         if (!$this->user_bin->contains($userBin)) {
